--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "phergie/phergie-irc-connection": "dev-master",
         "react/event-loop": "dev-master",
         "react/stream": "dev-master",
-        "monolog/monolog": "@dev"
+        "monolog/monolog": "dev-master"
     },
     "autoload": {
         "psr-0": {
