--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "phergie/phergie-irc-parser": "dev-master",
-        "phergie/phergie-irc-generator": "dev-master",
-        "phergie/phergie-irc-connection": "dev-master",
+        "phergie/phergie-irc-parser": "1.3.*",
+        "phergie/phergie-irc-generator": "1.2.*",
+        "phergie/phergie-irc-connection": "1.1.*",
         "react/event-loop": "0.3.*",
         "react/stream": "0.3.*",
-        "monolog/monolog": "~1.2"
+        "monolog/monolog": "1.6.*"
     },
     "autoload": {
         "psr-0": {
