--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "phergie/phergie-irc-connection": "1.1.*",
         "react/event-loop": "0.3.*",
         "react/stream": "0.3.*",
+        "psr/log": "~1.0",
         "monolog/monolog": "1.6.*"
     },
     "autoload": {
