--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,10 @@
         "psr/log": "~1.0",
         "monolog/monolog": "1.6.*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*",
+        "phake/phake": "2.0.0-alpha4"
+    },
     "autoload": {
         "psr-0": {
             "Phergie": "src"
