--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ php:
   - 5.5
 
 before_script:
+  - composer self-update
   - composer install
-  - cd tests && composer install
+  - cd tests
 
 script:
-  - ./vendor/bin/phpunit --coverage-text
+  - ../vendor/bin/phpunit --coverage-text
