--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": ">=5.3.3",
         "phergie/phergie-irc-parser": "1.3.*",
         "phergie/phergie-irc-generator": "1.2.*",
-        "phergie/phergie-irc-connection": "1.1.*",
+        "phergie/phergie-irc-connection": "dev-master",
         "react/event-loop": "0.3.*",
         "react/stream": "0.3.*",
         "psr/log": "~1.0",
