--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
         "monolog/monolog": "1.6.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "phake/phake": "2.0.0-alpha4"
+        "phpunit/phpunit": "4.1.*",
+        "phake/phake": "2.0.0-beta1"
     },
     "autoload": {
         "psr-4": {
