--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "phergie/phergie-irc-parser": "1.3.*",
-        "phergie/phergie-irc-generator": "1.2.*",
+        "phergie/phergie-irc-parser": "dev-master",
+        "phergie/phergie-irc-generator": "dev-master",
         "phergie/phergie-irc-connection": "dev-master",
         "react/event-loop": "0.3.*",
         "react/stream": "0.3.*",
