--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "phergie/phergie-irc-connection": "dev-master",
         "react/event-loop": "0.3.*",
         "react/stream": "0.3.*",
+        "react/dns": "0.3.*",
+        "react/promise": "1.0.0",
         "psr/log": "~1.0",
         "monolog/monolog": "1.6.*"
     },
