Fixes #15: Implemented SSL support using react/socket-client

--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,13 @@
         "psr/log": "~1.0",
         "monolog/monolog": "1.6.*"
     },
+    "suggest": {
+        "react/socket-client": "provides SSL support (use 0.3.*)"
+    },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
-        "phake/phake": "2.0.0-beta2"
+        "phake/phake": "2.0.0-beta2",
+        "react/socket-client": "0.3.*"
     },
     "autoload": {
         "psr-4": {
