--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,10 @@
         "psr-4": {
             "Phergie\\Irc\\Client\\React\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Phergie\\Irc\\Tests\\Client\\React\\": "tests"
+        }
     }
 }
