--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "phergie/phergie-irc-generator": "dev-master",
         "phergie/phergie-irc-connection": "dev-master",
         "react/event-loop": ">=0.3.0,<0.5.0",
-        "react/stream": "0.3.*",
-        "react/dns": "0.3.*",
+        "react/stream": ">=0.3.0,<0.5.0",
+        "react/dns": ">=0.3.0,<0.5.0",
         "react/promise": "1.0.*",
         "psr/log": "~1.0",
         "monolog/monolog": "1.6.*"
