--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "react/dns": "0.4.*",
         "react/promise": "~2.0",
         "psr/log": "~1.0",
-        "monolog/monolog": "1.6.*"
+        "monolog/monolog": "~1.6"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
