--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,13 @@ php:
 
 before_script:
   - composer self-update
-  - composer install
+  - composer install --dev
+  - mkdir -p build/cov
+  - mkdir -p build/logs
 
 script:
-  - ./vendor/bin/phpunit --coverage-text
+  - ./vendor/bin/phpunit --coverage-clover build/cov/clover.xml
+
+after_script:
+  - ./vendor/bin/coveralls -v
+  - CODECLIMATE_REPO_TOKEN=d3ada8866be9e0014142368d73317e2d4a90ea3dd25745ff31e087361d352d83 ./vendor/bin/test-reporter --coverage-report=build/cov/clover.xml
