--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*",
-        "phake/phake": "2.0.0-beta2"
+        "phake/phake": "2.0.0-beta2",
+        "codeclimate/php-test-reporter": "~0.1",
+        "satooshi/php-coveralls": "0.6.1"
     },
     "autoload": {
         "psr-4": {
