Fixing parse error in Travis configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ script:
 after_script:
   - ./vendor/bin/coveralls -v
   - CODECLIMATE_REPO_TOKEN="d3ada8866be9e0014142368d73317e2d4a90ea3dd25745ff31e087361d352d83" ./vendor/bin/test-reporter --stdout > codeclimate.json
-  - curl -X POST -d @codeclimate.json -H 'Content-Type: application/json' -H 'User-Agent: Code Climate (PHP Test Reporter v0.1.1)' https://codeclimate.com/test_reports
+  - curl -X POST -d @codeclimate.json -H 'Content-Type: application/json' -H 'User-Agent: Code Climate (PHP Test Reporter v0.1.1)' "https://codeclimate.com/test_reports"
