--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     },
     "require": {
         "php": ">=5.4.2",
-        "phergie/phergie-irc-parser": "1.*",
-        "phergie/phergie-irc-generator": "1.*",
+        "phergie/phergie-irc-parser": "~1.6",
+        "phergie/phergie-irc-generator": "~1.5",
         "phergie/phergie-irc-connection": "1.*",
         "react/event-loop": "0.4.*",
         "react/stream": "~0.4.2",
@@ -27,7 +27,11 @@
         "phpunit/phpunit": "4.1.*",
         "phake/phake": "2.0.0-beta2",
         "codeclimate/php-test-reporter": "~0.1",
-        "satooshi/php-coveralls": "0.6.1"
+        "satooshi/php-coveralls": "0.6.1",
+        "symfony/config": "~2.0",
+        "symfony/console": "~2.0",
+        "symfony/filesystem": "~2.0",
+        "symfony/stopwatch": "~2.0"
     },
     "autoload": {
         "psr-4": {
