Use new phergie-irc-connection version, update composer dependencies

--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         "php": ">=5.4.2",
         "phergie/phergie-irc-parser": "~1.6",
         "phergie/phergie-irc-generator": "~1.5",
-        "phergie/phergie-irc-connection": "1.*",
-        "react/event-loop": "0.4.*",
+        "phergie/phergie-irc-connection": "~2.0",
+        "react/event-loop": "~0.4.0",
         "react/stream": "~0.4.2",
         "react/socket-client": "~0.4.2",
-        "react/dns": "0.4.*",
+        "react/dns": "~0.4.0",
         "react/promise": "~2.0",
         "psr/log": "~1.0",
         "monolog/monolog": "~1.6"
