--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,7 @@
         "monolog/monolog": "~1.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.6",
-        "phake/phake": "~2.1",
-        "codeclimate/php-test-reporter": "~0.1",
-        "satooshi/php-coveralls": "0.6.1",
-        "symfony/config": "~2.0",
-        "symfony/console": "~2.0",
-        "symfony/filesystem": "~2.0",
-        "symfony/stopwatch": "~2.0"
+        "phergie/phergie-irc-bot-react-development": "~1.0.0"
     },
     "autoload": {
         "psr-4": {
