--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,10 @@
         "psr-4": {
             "Phergie\\Irc\\Tests\\Client\\React\\": "tests"
         }
+    },
+    "config": {
+        "platform": {
+            "php": "5.5.23"
+        }
     }
 }
