Restored support for older versions of react/stream

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "phergie/phergie-irc-generator": "~1.5",
         "phergie/phergie-irc-connection": "~2.0",
         "react/event-loop": "^1.0 || ^0.5 || ^0.4.0",
-        "react/stream": "^1.0 || ^0.7",
-        "react/socket": "^1.0 || ^0.8",
+        "react/stream": "^1.0 || ^0.7 || ^0.6 || ^0.5 || ^0.4",
+        "react/socket": "^1.0 || ^0.8 || ^0.7",
         "react/dns": "~0.4.0",
         "react/promise": "~2.0",
         "psr/log": "~1.0",
