Alias timer interface for event-loop 0.4 and 0.5 compatibility

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "autoload": {
         "psr-4": {
             "Phergie\\Irc\\Client\\React\\": "src"
-        }
+        },
+        "files": ["src/timer_class_alias.php"]
     },
     "autoload-dev": {
         "psr-4": {
