--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "phergie/phergie-irc-parser": "~2.0",
         "phergie/phergie-irc-generator": "~1.5",
         "phergie/phergie-irc-connection": "~2.0",
-        "react/event-loop": "^1.0 || ^0.5 || ^0.4.0",
+        "react/event-loop": "^1.0 || ^0.5",
         "react/stream": "^1.0 || ^0.7 || ^0.6 || ^0.5 || ^0.4",
         "react/socket": "^1.0 || ^0.8 || ^0.7",
         "react/dns": "~0.4.0",
@@ -31,8 +31,7 @@
     "autoload": {
         "psr-4": {
             "Phergie\\Irc\\Client\\React\\": "src"
-        },
-        "files": ["src/timer_class_alias.php"]
+        }
     },
     "autoload-dev": {
         "psr-4": {
