--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,13 @@ php:
   - 5.6
   - 7.0
   - 7.1
+  - 7.2
+  - 7.3
+  - nightly
+
+matrix:
+  allow_failures:
+  - php: nightly
 
 before_script:
   - composer self-update
